--- a/piatrika/src/app/components/plot_visit/add-plot-visit/add-plot-visit.component.html
+++ b/piatrika/src/app/components/plot_visit/add-plot-visit/add-plot-visit.component.html
@@ -35,8 +35,8 @@
     </div>
     <div class="form-group col-md-6">
       <label for="timestamp">Timestamp</label>
-      {{<input type="date" class="form-control" id="timestamp" placeholder="Enter timestamp" required
-        [(ngModel)]="plotvisit.timestamp" name="timestamp" #timestamp="ngModel">
+      <input type="text" class="form-control" id="timestamp" placeholder="Enter timestamp" required
+        [(ngModel)]="plotvisit.timestamp" name="timestamp" #timestamp="ngModel"  bsDatepicker [bsConfig]="datePickerConfig">
     </div>
       </div>
 
