--- a/piatrika/src/app/components/application_treatment/application-treatment/application-treatment.component.html
+++ b/piatrika/src/app/components/application_treatment/application-treatment/application-treatment.component.html
@@ -14,7 +14,7 @@
     <tbody>
       <tr *ngFor="let applicationtreatment of applicationtreatments">
 
-        <td>{{applicationtreatment.date}}</td>
+        <td>{{applicationtreatment.date|date:'dd-MM-yy'}}</td>
         <td>{{applicationtreatment.application_treatment}}</td>
         <td>{{applicationtreatment.applied}}</td>
         <td>{{applicationtreatment.ssp}}</td>
