--- a/piatrika/src/app/app.component.css
+++ b/piatrika/src/app/app.component.css
@@ -2,24 +2,24 @@
   position:fixed;
   width:100%;
   z-index:10000001;
-  background-color: #9ACD32;
+  background-color: #439036;
   -webkit-box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
   box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
 }
-
+body { background-color:#f8f8f5; }
 .navbar-inverse .navbar-nav>.active>a:hover,.navbar-inverse .navbar-nav>li>a:hover, 
 .navbar-inverse .navbar-nav>li>a:focus,.navbar-inverse .navbar-nav>li>a:active 
-{ background-color: green;border-radius: 4px;-ms-border-radius:4px;-moz-border-radius:2px;}
+{ background-color: green;color:yellow}
 .navbar-inverse .navbar-nav>.active>a,.navbar-inverse .navbar-nav>.open>a,.navbar-inverse
  .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover,.navbar-inverse .navbar-nav>.open>a, 
  .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus 
- { background-color:green;color:white;}
+ { background-color:green;color:yellow;}
 .dropdown-menu { background-color: white}
-.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { background-color: #9ACD32}
+.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { background-color: #439036}
 .navbar-inverse { background-image: none; }
 .dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { background-image: none; }
-.navbar-inverse { border-color: #9ACD32}
+.navbar-inverse { border-color: #439036}
 .navbar-inverse .navbar-brand { color: white}
 .navbar-inverse .navbar-brand:hover { color: white}
 .navbar-inverse .navbar-nav>li>a { color: white}
@@ -33,12 +33,12 @@
   color: white;
 }
 .mybg{
-  background-color: #9ACD32;
+  background-color: #439036;
   color:white;
 }
 .mybg:hover,.mybg:focus{
   background-color: green;
-  color:white;
+  color:yellow;
 }
 #piatrikacontainer{
   margin-top:80px;
@@ -65,7 +65,7 @@
   margin-left: -250px;
   width: 0;
   height: 100%;
-  background: #9ACD32;
+  background: #439036;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -125,3 +125,5 @@
   }
 
 }
+
+
