--- a/piatrika/src/app/app.component.css
+++ b/piatrika/src/app/app.component.css
@@ -6,6 +6,7 @@
   -webkit-box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
   box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
+  padding-bottom:100px;
 }
 body { background-color:#f8f8f5; }
 .navbar-inverse .navbar-nav>.active>a:hover,.navbar-inverse .navbar-nav>li>a:hover, 
