--- a/piatrika/src/app/app.component.html
+++ b/piatrika/src/app/app.component.html
@@ -1,6 +1,7 @@
 
- <nav class="navbar navbar-expand-lg navbar-inverse mybg1 border-bottom navbar-fixed-top">
-  <button class="btn btn-light" id="menu-toggle"> <div class="icon-bar">
+ <nav class="navbar navbar-expand-lg navbar-inverse border-bottom navbar-fixed-top">
+  <button class="btn btn-light" id="menu-toggle"> 
+    <div class="icon-bar">
       <i class="fa fa-bars"></i>
     </div></button>
     <a class="navbar-brand" routerLink='/home'>PIATRIKA</a>
@@ -8,7 +9,8 @@
 
   <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" 
   data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="padding: 8px 10px 8px 10px;">
+    aria-controls="navbarSupportedContent" aria-expanded="false"
+     aria-label="Toggle navigation" style="padding: 8px 10px 8px 10px;">
     <div class="icon-bar">
       <i class="fa fa-bars"></i>
     </div>        
@@ -29,8 +31,8 @@
     <!-- Sidebar -->
     <div class="navbar-inverse border-right" id="sidebar-wrapper">
       
-      <div class="list-group list-group-flush">
-        <a class="list-group-item list-group-item-action mybg"
+      <div class="list-group list-group-flush" id="listgroupflush">
+        <a class="list-group-item list-group-item-action mybg" 
           routerLink="/applicationtreatment/add">ApplicationTreatment</a>
         <a class="list-group-item list-group-item-action mybg" routerLink="/bank/add">Bank</a>
         <a class="list-group-item list-group-item-action mybg" routerLink="/crop/add">Crop</a>
