--- a/piatrika/src/app/components/season/season/season.component.html
+++ b/piatrika/src/app/components/season/season/season.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table class="table table-bordered">
+    <table class="table table-bordered table-responsive">
       <thead>
         <tr>
           <th>Season_Start</th>
