--- a/piatrika/src/app/app.component.css
+++ b/piatrika/src/app/app.component.css
@@ -7,6 +7,7 @@
   -moz-box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
   box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
 }
+
 body { background-color:#f8f8f5; }
 .navbar-inverse .navbar-nav>.active>a:hover,.navbar-inverse .navbar-nav>li>a:hover, 
 .navbar-inverse .navbar-nav>li>a:focus,.navbar-inverse .navbar-nav>li>a:active 
@@ -40,6 +41,7 @@ body { background-color:#f8f8f5; }
   background-color: green;
   color:yellow;
 }
+
 #piatrikacontainer{
   margin-top:80px;
 }
@@ -57,8 +59,9 @@ body { background-color:#f8f8f5; }
 }
 
 #sidebar-wrapper {
-  position: fixed;
-  top:56px;
+  position: absolute;
+  padding-top:56px;
+  padding-bottom:56px;
   left: 250px;
   z-index: 1000;
   overflow-y: auto;
@@ -72,7 +75,9 @@ body { background-color:#f8f8f5; }
   transition: all 0.5s ease;
   overflow-x: hidden;
 }
-
+#listgroupflush{
+  margin-bottom:50px;
+}
 #wrapper.toggled #sidebar-wrapper {
   width: 250px;
 }
@@ -119,7 +124,6 @@ body { background-color:#f8f8f5; }
 }
 @media(max-width:767px) {
 
- 
   .navbar-brand1>img{
       margin-top:2px;
   }
