--- a/piatrika/src/app/components/home/home/home.component.css
+++ b/piatrika/src/app/components/home/home/home.component.css
@@ -1,8 +1,8 @@
 .buttonspan{
     margin-top:30px;
 }
-.mycolspan{
-    margin-top:30px;
+#myscardpan{
+    margin-top:3%;
 }
 
 .panel-body img {
@@ -13,10 +13,12 @@
     margin: 0;
     margin-top: 5px;
   }
-  
-
+  card-img-top{
+    width:100%;
+    height:auto;
+  }
   agm-map {
-    height: 300px;
+    height: 30vh;
   }
   
   
