--- a/piatrika/src/app/components/home/home/home.component.css
+++ b/piatrika/src/app/components/home/home/home.component.css
@@ -13,10 +13,10 @@
     margin: 0;
     margin-top: 5px;
   }
-  card-img-top{
+/*   card-img-top{
     width:100%;
     height:auto;
-  }
+  } */
   agm-map {
     height: 30vh;
   }
