--- a/piatrika/src/app/app.component.css
+++ b/piatrika/src/app/app.component.css
@@ -60,7 +60,7 @@ body { background-color:#f8f8f5; }
 }
 
 #sidebar-wrapper {
-  position: absolute;
+  position: fixed;
   padding-top:56px;
   padding-bottom:56px;
   left: 250px;
