--- a/piatrika/src/app/components/application_treatment/application-treatment/application-treatment.component.html
+++ b/piatrika/src/app/components/application_treatment/application-treatment/application-treatment.component.html
@@ -1,5 +1,5 @@
-<div>
-  <table class="table table-bordered">
+<div class="table-responsive">
+    <table class="table table-bordered">
     <thead>
       <tr>
         <th>Date</th>
