--- a/piatrika/src/app/components/farmers/farmers/farmers.component.html
+++ b/piatrika/src/app/components/farmers/farmers/farmers.component.html
@@ -1,5 +1,5 @@
-  <table class="table table-bordered">
-    <thead>
+<div class="table-responsive">
+    <table class="table table-bordered">    <thead>
       <tr>
         <th>CSI_Code</th>
         <th>RNo</th>
@@ -37,7 +37,7 @@
 
     </tbody>
   </table>
-
+</div>
 
 <div>
   <button class="btn btn-sm btn-warning myspan" (click)="goBack()">Back</button>
