--- a/piatrika/src/app/components/phone/phone/phone.component.html
+++ b/piatrika/src/app/components/phone/phone/phone.component.html
@@ -1,6 +1,6 @@
-<div>
-  <table class="table table-bordered">
-      <thead>
+  <div class="table-responsive">
+    <table class="table table-bordered">
+            <thead>
         <tr>
           <th>Phone_Type</th>
           <th>Number</th>
@@ -27,9 +27,9 @@
       
       </tbody>
     </table>
+    </div>
  
 
-</div>
 
 <div>
   <button class="btn btn-sm btn-warning myspan" (click)="goBack()">Back</button>
