--- a/piatrika/src/app/components/variety/variety/variety.component.html
+++ b/piatrika/src/app/components/variety/variety/variety.component.html
@@ -1,5 +1,5 @@
-<div>
-  <table class="table table-bordered table-responsive">
+<div class="table-responsive">
+  <table class="table table-bordered">
       <thead>
         <tr>
           <th>Variety</th>
