--- a/piatrika/src/app/app.component.css
+++ b/piatrika/src/app/app.component.css
@@ -41,7 +41,9 @@ body { background-color:#f8f8f5; }
   background-color: green;
   color:yellow;
 }
-
+select{
+  border:none;
+}
 #piatrikacontainer{
   margin-top:80px;
   margin-bottom:20px;
