--- a/piatrika/src/app/components/bank/add-bank/add-bank.component.html
+++ b/piatrika/src/app/components/bank/add-bank/add-bank.component.html
@@ -1,4 +1,4 @@
-<div [hidden]="submitted">
+<div [hidden]="submitted" class="shadow-sm p-3 mb-5 bg-white rounded">
     <form #addBankForm="ngForm">
   
         <div class="form-row">
