--- a/piatrika/src/app/components/farmer_bank/add-farmer-bank/add-farmer-bank.component.html
+++ b/piatrika/src/app/components/farmer_bank/add-farmer-bank/add-farmer-bank.component.html
@@ -1,4 +1,5 @@
-<div [hidden]="submitted">
+<div [hidden]="submitted" class="shadow-sm p-3 mb-5 bg-white rounded"
+>
     <form #addFarmerBankForm="ngForm">
         <div class="form-row">
         <div class="form-group col-md-6">
