--- a/piatrika/src/app/components/phone/phone/phone.component.html
+++ b/piatrika/src/app/components/phone/phone/phone.component.html
@@ -1,4 +1,4 @@
-  <div class="table-responsive">
+  <div class="table-responsive shadow-sm p-3 mb-5 bg-white rounded">
     <table class="table table-bordered">
             <thead>
         <tr>
@@ -27,11 +27,11 @@
       
       </tbody>
     </table>
+    <br><button class="btn btn-sm btn-warning myspan" (click)="goBack()">Back</button>
+
     </div>
  
 
 
-<div>
-  <button class="btn btn-sm btn-warning myspan" (click)="goBack()">Back</button>
-</div>
+
 
