--- a/piatrika/src/app/components/variety/variety/variety.component.html
+++ b/piatrika/src/app/components/variety/variety/variety.component.html
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive shadow-sm p-3 mb-5 bg-white rounded">
   <table class="table table-bordered">
       <thead>
         <tr>
@@ -25,6 +25,8 @@
         </tr>
       
       </tbody>
+      <br><button class="btn btn-sm btn-warning myspan" (click)="goBack()">Back</button>
+
     </table>
  
 
