--- a/piatrika/src/app/components/home/home/home.component.css
+++ b/piatrika/src/app/components/home/home/home.component.css
@@ -1,9 +1,9 @@
-.buttonspan{
+/* .buttonspan{
     margin-top:30px;
 }
 #myscardpan{
     margin-top:3%;
-}
+} */
 
 .panel-body img {
     width: 100%;
@@ -14,9 +14,9 @@
     margin-top: 5px;
   }
   
-  agm-map {
+  /* agm-map {
     height: 30vh;
-  }
+  } */
   
   
   
