--- a/piatrika/src/app/components/plot_visit/plot-visit-details/plot-visit-details.component.html
+++ b/piatrika/src/app/components/plot_visit/plot-visit-details/plot-visit-details.component.html
@@ -37,7 +37,7 @@
      <div class="form-group col-md-6">
       <label for="timestamp">Timestamp</label>
       <input type="text" class="form-control" id="timestamp" placeholder="Enter timestamp" required
-        [(ngModel)]="plotvisit.timestamp" name="timestamp" #timestamp="ngModel"  bsDatepicker [bsConfig]="datePickerConfig">
+        [(ngModel)]="plotvisit.timestamp" name="timestamp" #timestamp="ngModel"  bsDatepicker>
     </div>
       </div>
 
