--- a/piatrika/src/app/components/farmers/add-farmers/add-farmers.component.html
+++ b/piatrika/src/app/components/farmers/add-farmers/add-farmers.component.html
@@ -99,9 +99,18 @@
          #LatLng="ngModel"/>
          </div>
         </div>
-      <div id="mapid" style="height:350px;width:100%;">
-        
-      </div>
+       
+     <div
+	leaflet 
+	style="height: 60vh;"
+    leafletDraw
+    [leafletOptions]="options"
+    [leafletDrawOptions]="drawOptions"
+    (leafletMapReady)="onMapReady($event)">
+</div>
+
+<!-- <button type="button" class="btn btn-primary" (click)="loadMap()">GeoLocation</button> -->
+
       <br>
      
      
