--- a/piatrika/src/app/app.component.css
+++ b/piatrika/src/app/app.component.css
@@ -57,15 +57,16 @@ body { background-color:#f8f8f5; }
 
 #wrapper.toggled {
   padding-left: 250px;
+  
 }
 
 #sidebar-wrapper {
   position: fixed;
-  padding-top:56px;
+  top:56px;
   padding-bottom:56px;
   padding-right:1px;
   left: 250px;
-  z-index: 1000;
+  z-index: 9999;
   margin-left: -250px;
   width: 0;
   height: 100%;
@@ -74,13 +75,13 @@ body { background-color:#f8f8f5; }
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
-  overflow-x: hidden;
+  overflow-y: scroll;
 }
 #listgroupflush{
   margin-bottom:50px;
 }
 #wrapper.toggled #sidebar-wrapper {
-  width: 250px;
+  width: 250px;overflow: hidden;
 }
 
 #page-content-wrapper {
