--- a/piatrika/src/app/app.component.html
+++ b/piatrika/src/app/app.component.html
@@ -1,5 +1,5 @@
 
- <nav class="navbar navbar-expand-lg navbar-inverse border-bottom navbar-fixed-top">
+ <nav class="navbar navbar-expand-lg navbar-inverse navbar-fixed-top">
   <button class="btn btn-light" id="menu-toggle"> 
     <div class="icon-bar">
       <i class="fa fa-bars"></i>
@@ -30,8 +30,9 @@
 
     <!-- Sidebar -->
     <div class="navbar-inverse border-right" id="sidebar-wrapper">
-      
+
       <div class="list-group list-group-flush" id="listgroupflush">
+
         <a class="list-group-item list-group-item-action mybg" 
           routerLink="/applicationtreatment/add">ApplicationTreatment</a>
         <a class="list-group-item list-group-item-action mybg" routerLink="/bank/add">Bank</a>
@@ -48,14 +49,18 @@
         <a class="list-group-item list-group-item-action mybg" routerLink="/plotvisit/add">PlotVisit</a>
         <a class="list-group-item list-group-item-action mybg" routerLink="/season/add">Season</a>
         <a class="list-group-item list-group-item-action mybg" routerLink="/varietee/add">Variety</a>
-
         <a class="list-group-item list-group-item-action mybg" routerLink="/village/add">Village</a>
 
       </div>
+
     </div>
+
     <!-- /#sidebar-wrapper -->
   
-    <!-- Page Content -->
+   
+  
+  </div>
+   <!-- Page Content -->
     <div id="page-content-wrapper">
   
      
@@ -66,6 +71,4 @@
       </div>
     </div>
     <!-- /#page-content-wrapper -->
-  
-  </div>
   <!-- /#wrapper -->
