--- a/piatrika/src/app/components/home/home/home.component.css
+++ b/piatrika/src/app/components/home/home/home.component.css
@@ -1,22 +1,7 @@
-/* .buttonspan{
-    margin-top:30px;
-}
-#myscardpan{
-    margin-top:3%;
-} */
 
-.panel-body img {
-    width: 100%;
-    max-width: 100%;
-  }
-  .panel-body p {
-    margin: 0;
-    margin-top: 5px;
-  }
-  
-  /* agm-map {
-    height: 30vh;
-  } */
-  
+#myscardpan{
+padding-bottom:1px;
+} 
+
   
   
