--- a/piatrika/src/app/components/home/home/home.component.html
+++ b/piatrika/src/app/components/home/home/home.component.html
@@ -1,8 +1,8 @@
 
-  <div class="card-group shadow-sm p-3 mb-5 bg-white rounded">
-    <a class="col-md-4" *ngFor="let hero of heroes" routerLink="/{{hero.name}}" id="myscardpan"> 
+  <div class="card-group">
+    <a class="col-md-4" *ngFor="let hero of heroes" routerLink="/{{hero.name}}"> 
       <div class="card shadow-sm p-3 mb-3 bg-white rounded">
-        <p class="card-title bg-success text-white text-center">{{hero.name|uppercase}}</p>
+        <p class="card-title bg-success text-white text-center"  id="myscardpan">{{hero.name|uppercase}}</p>
       <img class="card-img-top" src="assets/piatrika-logo.png" alt="piatrika-logo">
       </div></a>
       
