--- a/piatrika/src/app/app.component.html
+++ b/piatrika/src/app/app.component.html
@@ -10,7 +10,7 @@
   <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" 
   data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false"
-     aria-label="Toggle navigation" style="padding: 8px 10px 8px 10px;">
+     aria-label="Toggle navigation" style="padding: 10px 12px 10px 12px;font-size: 16px;">
     <div class="icon-bar">
       <i class="fa fa-bars"></i>
     </div>        
