--- a/piatrika/src/app/app.component.css
+++ b/piatrika/src/app/app.component.css
@@ -11,11 +11,11 @@
 body { background-color:#f8f8f5; }
 .navbar-inverse .navbar-nav>.active>a:hover,.navbar-inverse .navbar-nav>li>a:hover, 
 .navbar-inverse .navbar-nav>li>a:focus,.navbar-inverse .navbar-nav>li>a:active 
-{ background-color: green;color:yellow}
+{ color:yellow}
 .navbar-inverse .navbar-nav>.active>a,.navbar-inverse .navbar-nav>.open>a,.navbar-inverse
  .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover,.navbar-inverse .navbar-nav>.open>a, 
  .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus 
- { background-color:green;color:yellow;}
+ {color:yellow;}
 .dropdown-menu { background-color: white}
 .dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { background-color: #439036}
 .navbar-inverse { background-image: none; }
