--- a/piatrika/src/app/app.component.css
+++ b/piatrika/src/app/app.component.css
@@ -11,11 +11,11 @@
 body { background-color:#f8f8f5; }
 .navbar-inverse .navbar-nav>.active>a:hover,.navbar-inverse .navbar-nav>li>a:hover, 
 .navbar-inverse .navbar-nav>li>a:focus,.navbar-inverse .navbar-nav>li>a:active 
-{ background-color: green;color:yellow}
+{ color:yellow}
 .navbar-inverse .navbar-nav>.active>a,.navbar-inverse .navbar-nav>.open>a,.navbar-inverse
  .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover,.navbar-inverse .navbar-nav>.open>a, 
  .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus 
- { background-color:green;color:yellow;}
+ {color:yellow;}
 .dropdown-menu { background-color: white}
 .dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { background-color: #439036}
 .navbar-inverse { background-image: none; }
@@ -76,6 +76,9 @@ body { background-color:#f8f8f5; }
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
   overflow-y: scroll;
+   overflow-y: scroll;-webkit-box-shadow: 6px 2px 7px -4px rgba(0,0,0,0.34);
+  -moz-box-shadow: 6px 2px 7px -4px rgba(0,0,0,0.34);
+  box-shadow: 6px 2px 7px -4px rgba(0,0,0,0.34);
 }
 #listgroupflush{
   margin-bottom:50px;
