--- a/piatrika/src/app/app.component.css
+++ b/piatrika/src/app/app.component.css
@@ -43,7 +43,7 @@ body { background-color:#f8f8f5; }
 }
 
 #piatrikacontainer{
-  margin-top:80px;
+  margin-top:100px;
   margin-bottom:20px;
 }
 
@@ -62,7 +62,7 @@ body { background-color:#f8f8f5; }
 
 #sidebar-wrapper {
   position: fixed;
-  top:56px;
+  top:76px;
   padding-bottom:56px;
   padding-right:1px;
   left: 250px;
@@ -76,7 +76,7 @@ body { background-color:#f8f8f5; }
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
   overflow-y: scroll;
-   overflow-y: scroll;-webkit-box-shadow: 6px 2px 7px -4px rgba(0,0,0,0.34);
+ -webkit-box-shadow: 6px 2px 7px -4px rgba(0,0,0,0.34);
   -moz-box-shadow: 6px 2px 7px -4px rgba(0,0,0,0.34);
   box-shadow: 6px 2px 7px -4px rgba(0,0,0,0.34);
 }
