--- a/piatrika/src/app/app.component.html
+++ b/piatrika/src/app/app.component.html
@@ -1,10 +1,13 @@
 
- <nav class="navbar navbar-expand-lg navbar-inverse navbar-fixed-top">
+ <nav class="navbar navbar-expand-lg navbar-inverse fixed-top">
   <button class="btn btn-light" id="menu-toggle"> 
     <div class="icon-bar">
       <i class="fa fa-bars"></i>
     </div></button>
-    <a class="navbar-brand" routerLink='/home'>PIATRIKA</a>
+    <!-- <a class="navbar-brand" routerLink='/home'>PIATRIKA</a> -->
+	  <a class="navbar-brand" routerLink='/home'> 
+      <img src="../assets/piatrika-home.jpeg" alt="Logo" style="height:50px;width:180px;border-radius: 8px;">
+    </a>
 
 
   <button class="navbar-toggler bg-light" type="button" data-toggle="collapse"
