--- a/piatrika/src/app/app.component.html
+++ b/piatrika/src/app/app.component.html
@@ -6,7 +6,7 @@
     </div></button>
     <!-- <a class="navbar-brand" routerLink='/home'>PIATRIKA</a> -->
 	  <a class="navbar-brand" routerLink='/home'> 
-      <img src="../assets/piatrika-home.jpeg" alt="Logo" style="height:50px;width:180px;border-radius: 8px;">
+      <img src="../assets/piatrika-logo.png" alt="piatrika-logo" style="height:50px;width:120px;border-radius: 8px;background-color: white;">
     </a>
 
 
