--- a/piatrika/src/app/app.component.css
+++ b/piatrika/src/app/app.component.css
@@ -5,7 +5,7 @@
   background-color: #439036;
   -webkit-box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
-  box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);
+  box-shadow: 0px 14px 12px -13px rgba(0,0,0,0.75);padding:0;
 }
 
 body { background-color:#f8f8f5; }
@@ -43,7 +43,7 @@ body { background-color:#f8f8f5; }
 }
 
 #piatrikacontainer{
-  margin-top:100px;
+  margin-top:80px;
   margin-bottom:20px;
 }
 
@@ -62,7 +62,7 @@ body { background-color:#f8f8f5; }
 
 #sidebar-wrapper {
   position: fixed;
-  top:76px;
+  top:56px;
   padding-bottom:56px;
   padding-right:1px;
   left: 250px;
