--- a/piatrika/src/app/components/home/home/home.component.html
+++ b/piatrika/src/app/components/home/home/home.component.html
@@ -3,7 +3,7 @@
     <a class="col-md-4" *ngFor="let hero of heroes" routerLink="/{{hero.name}}"> 
       <div class="card shadow-sm p-3 mb-3 bg-white rounded">
         <p class="card-title bg-success text-white text-center"  id="myscardpan">{{hero.name|uppercase}}</p>
-      <img class="card-img-top" src="../assets/piatrika-home.jpeg" alt="piatrika-home">
+      <img class="card-img-top" src="../assets/piatrika-logo.png" alt="piatrika-home">
       </div></a>
       
   </div>  
